feat(app/v3): team && user
